<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dungeon Crawl: Stone Soup for Android</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu">Menu</string>
    <string name="menu_help">Help</string>
    <string name="menu_change_keyboard_transparency">Change keyboard alpha</string>
    <string name="menu_quit">Save &amp; Quit</string>
    <string name="menu_reset_terminal_position">Reset terminal position</string>
    <string name="menu_lock_terminal_position">Lock terminal position</string>
    <string name="menu_unlock_terminal_position">Unlock terminal position</string>
    <string name="menu_show_hide_keyboard">Show/Hide Keyboard</string>
    <string name="install_dialog_title">Installing Dungeon Crawl: Stone Soup %1$s</string>
    <string name="updating_dialog_title">Updating Dungeon Crawl: Stone Soup to %1$s</string>
    <string name="warning_dialog_title">Warning</string>
    <string name="warning_dialog_message">Pressing \"Install\" will install the latest version of Dungeon Crawl. If you have any saved characters currently running, they may not be compatible with this version.\nYou can download an older version of the app if you wish to continue playing with your older characters. Press \""Download older version\" to download an older version from the project website (this release is %s, so try one before that). Otherwise, just press \"Install\" to continue installing the latest version.\nIf you mess everything up, you can still backup the saves directory from the preference screen.</string>
    <string name="warning_dialog_positive_button">Install</string>
    <string name="warning_dialog_neutral_button">Download old version</string>
    <string name="warning_dialog_negative_button">Cancel</string>
    <string name="copy_text">Copy text</string>
    <string name="text_copied">Text copied to clipboard</string>
    <string name="morgue">Morgue</string>
    <string name="save_files">Save Files</string>
    <string name="backup_save_directory">Backup save directory</string>
    <string name="backup_saves_dialog_message">The save directory will be backed up to here:</string>
    <string name="backup_morgue_directory">Backup morgue directory</string>
    <string name="backup_morgue_dialog_message">The morgue directory will be backed up to here:</string>
    <string name="backup">Backup</string>
    <string name="restore_save_directory">Restore save directory</string>
    <string name="restore_saves_dialog_message">The save directory will be restored from here:</string>
    <string name="restore_morgue_directory">Restore morgue directory</string>
    <string name="restore_morgue_dialog_message">The morgue directory will be restored from here:</string>
    <string name="restore">Restore</string>
    <string name="copying_files">Copying files...</string>
    <string name="files_copied_successfully">Files copied successfully</string>
    <string name="error_copying_files">Error copying files</string>

    <string name="preferences_vibrate_title">Vibrate</string>
    <string name="preferences_vibrate_summary">Enable or disable vibration in game</string>
    <string name="preferences_fullscreen_title">Full screen</string>
    <string name="preferences_fullscreen_summary">Enable or disable game in full screen</string>
    <string name="preferences_skipsplash_title">Skip splash screen</string>
    <string name="preferences_skipsplash_summary">Automatically skip the splash screen on startup</string>
    <string name="preferences_orientation_title">Orientation</string>
    <string name="preferences_orientation_summary">Select screen orientation</string>
    <string name="preferences_fontface_title">Font</string>
    <string name="preferences_fontface_summary">Hi-res devices only</string>
    <string name="preferences_gameplugin_title">Selected variant</string>
    <string name="preferences_gameplugin_summary">Note that these Game settings stick to the active profile</string>
    <string name="preferences_enablevkey_title">Enable virtual keyboard</string>
    <string name="preferences_enablevkey_summary">Display virtual keyboard (forces portrait orientation)</string>
    <string name="preferences_portraitkb_title">Portrait keyboard</string>
    <string name="preferences_portraitkb_summary">Choose which virtual keyboard to display in portrait orientation</string>
    <string name="preferences_landscapekb_title">Landscape keyboard</string>
    <string name="preferences_landscapekb_summary">Choose which virtual keyboard to display in landscape orientation</string>
    <string name="preferences_enablevolkeyfontsize_title">Volume key font sizing</string>
    <string name="preferences_enablevolkeyfontsize_summary">Font size changed by volume up &amp; down keys</string>
    <string name="preferences_enabletouch_title">Enable touch directionals</string>
    <string name="preferences_enabletouch_summary">Turn on touchscreen directional controls</string>
    <string name="preferences_alwaysrun_title">Always run</string>
    <string name="preferences_alwaysrun_summary">Always run when using touch directional commands</string>
    <string name="preferences_haptic_feedback_title">Enable haptic feedback</string>
    <string name="preferences_haptic_feedback_summary">Vibrate on key-press</string>
    <string name="preferences_keyboard_arrows_title">Show guide arrows on keyboard</string>
    <string name="preferences_keyboard_arrows_summary">Show red directional arrows on keyboard</string>

    <string name="display_category">Display</string>
    <string name="control_category">Control</string>
    <string name="game_category">Game</string>
    <string-array name="virtKeyActionDescriptions">
        <item>None</item>
        <item>Ctrl Key</item>
        <item>Enter Key</item>
        <item>Esc Key</item>
        <item>Period</item>
        <item>Shift Key</item>
        <item>Space</item>
        <item>Virtual Keyboard</item>
        <item>Zoom In</item>
        <item>Zoom Out</item>
    </string-array>
    <string-array name="virtKeyActions">
        <item>None</item>
        <item>CtrlKey</item>
        <item>EnterKey</item>
        <item>EscKey</item>
        <item>Period</item>
        <item>ShiftKey</item>
        <item>Space</item>
        <item>VirtualKeyboard</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
    </string-array>
    <string-array name="orientationDescriptions">
      <item>Sensor</item>
      <item>Portrait</item>
      <item>Landscape</item>
    </string-array>
    <string-array name="orientations">
      <item>0</item>
      <item>1</item>
      <item>2</item>
    </string-array>
    <string-array name="fontsDescriptions">
        <item>VeraMoBd</item>
        <item>8514oemreg</item>
    </string-array>
    <string-array name="fonts">
        <item>VeraMoBd.ttf</item>
        <item>8514oemreg.ttf</item>
    </string-array>
    <string-array name="virtualKeyboardValues">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="virtualKeyboards">
        <item>None</item>
        <item>Crawl Keyboard</item>
        <item>System Keyboard</item>
    </string-array>
    <string name="portraitkb.default">1</string>
    <string name="landscapekb.default">1</string>
    
    <!-- Config editor -->
    <string name="file_not_found">File not found</string>
    <string name="error_reading_file">Error while reading file</string>
    <string name="menu_revert">Revert</string>
    <string name="menu_save">Save</string>
    <string name="menu_restore_default">Restore default file</string>
    <string name="restore_default_confirm_message">This will restore the config file to its default setting, are you sure you want to continue?</string>
    <string name="config_saved">Config saved. Restart to apply changes</string>
    <string name="error_writing_file">Error while writing file</string>
    <string name="warning_unsaved_changes_title">Text modified</string>
    <string name="warning_unsaved_changes_message">Do you want to save the changes?</string>
    <string name="button_save">Save</string>
    <string name="button_dont_save">Don\'t save</string>
    
    <!--  The commented out entries seem to have been removed in 0.13.0 -->
    <string-array name="config_files">
        <item>init</item>
        <!-- item>autopickup_exceptions</item>
        <item>food_colouring</item>
        <item>menu_colours</item>
        <item>messages</item-->
        <item>no_vi_command_keys</item>
        <!--  item>runrest_messages</item>
        <item>standard_colours</item-->
    </string-array>
    <string name="config_file_prefererence_title">Edit %s.txt</string>
    <string name="add_new_layout">Add New Layout</string>
    <string name="delete_layout">Delete layout</string>
    <string name="delete_layout_message">Are you sure you want to delete the custom layout?</string>
    <string name="default_layout">DEFAULT</string>
    <string name="custom_layout">CUSTOM</string>
    <string name="layout_prefix">"Layout "</string>
    <string name="please_select_a_character">Please select a character</string>
    <string name="dialog_change_character_message">Choose a character to change the key to</string>
    <string name="transparency_slider_title">Drag to set transparency</string>


</resources>